--- a/.env-template
+++ b/.env-template
@@ -1,2 +1,4 @@
-BACKEND_URL = ""
-GOOGLE_MAPS_KEY = ""
+REACT_APP_BACKEND_URL = ""
+REACT_APP_GOOGLE_MAPS_KEY = ""
+REACT_APP_THINGSPEAK_CHANNEL_ID = ""
+REACT_APP_THINGSPEAK_API_KEY = ""
