--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.18",
     "@mui/system": "^5.14.18",
     "@react-google-maps/api": "^2.19.2",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.10.1",
     "redux": "^4.2.1",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
