--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "date-fns": "^2.30.0",
     "pdfmake": "^0.2.8",
     "react": "^18.2.0",
-    "react-datepicker": "^4.23.0",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
