--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.44.1",
     "axios": "^1.6.1",
     "date-fns": "^3.0.0-alpha.2",
     "pdfmake": "^0.2.8",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
