--- a/.env-template
+++ b/.env-template
@@ -2,4 +2,5 @@ REACT_APP_BACKEND_URL = ""
 REACT_APP_GOOGLE_MAPS_KEY = ""
 REACT_APP_THINGSPEAK_CHANNEL_ID = ""
 REACT_APP_THINGSPEAK_API_KEY = ""
+REACT_APP_THINGSPEAK_WRITE_API_KEY = ""
 REACT_APP_EMAIL_TEST= ""
